Activate/Deactivate scenario scheduler
- added database migrations
- added field `active` for scenario schedulers. The field is required for POST/PUT endpoints, and it is also returned by GET endpoints
- added endpoints `PUT /api/scenario-schedulers/:scenarioSchedulerId/activate` and `PUT /api/scenario-schedulers/:scenarioSchedulerId/activate`
- the scheduler service runs only active scenario schedulers
- updated openapi schema
